# ChangeLog for media-video/mjpegtools
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/mjpegtools/ChangeLog,v 1.153 2011/05/12 18:31:45 billie Exp $

*mjpegtools-2.0.0_rc1 (12 May 2011)

  12 May 2011; Daniel Pielmeier <billie@gentoo.org>
  +mjpegtools-2.0.0_rc1.ebuild, +files/mjpegtools-2.0.0_rc1-X11.patch,
  +files/mjpegtools-2.0.0_rc1-amd-k8.patch,
  +files/mjpegtools-2.0.0_rc1-dga-gtk-sdl-automagic.patch,
  +files/mjpegtools-2.0.0_rc1-libpng-1.5.patch,
  +files/mjpegtools-2.0.0_rc1-v4l-automagic.patch, metadata.xml:
  Version bump. Take over package. Fixes bug #259461, #259207, #355043, #359491
  and #361799.

  01 Apr 2011; Samuli Suominen <ssuominen@gentoo.org>
  mjpegtools-1.9.0-r1.ebuild:
  Remove USE="X" and always pass --with-x wrt #259461.

  23 Mar 2011; Tim Harder <radhermit@gentoo.org> -mjpegtools-1.8.0-r2.ebuild,
  -files/mjpegtools-1.8.0-as-needed.patch,
  -files/mjpegtools-1.8.0-fix-lav2mpeg.patch,
  -files/mjpegtools-1.8.0-gcc41.patch,
  -files/mjpegtools-1.8.0-glibc-2.10.patch,
  -files/mjpegtools-1.8.0-lavrec-memleak.patch,
  -files/mjpegtools-1.8.0-libc.patch,
  -files/mjpegtools-1.8.0-libquicktime.patch,
  -files/mjpegtools-1.8.0-no-jpeg-mmx.patch,
  -files/mjpegtools-1.8.0-parallelmake.patch,
  -files/mjpegtools-1.8.0-pkg-config.patch, -mjpegtools-1.9.0.ebuild:
  Remove old.

  15 Mar 2011; Ulrich Mueller <ulm@gentoo.org> mjpegtools-1.8.0-r2.ebuild,
  mjpegtools-1.9.0.ebuild, mjpegtools-1.9.0-r1.ebuild:
  Replace dependency on virtual/quicktime by libquicktime, bug 358857.

  07 Nov 2010; Jory A. Pratt <anarchy@gentoo.org>
  mjpegtools-1.8.0-r2.ebuild, mjpegtools-1.9.0.ebuild,
  mjpegtools-1.9.0-r1.ebuild:
  Convert media-libs/jpeg to virtual/jpeg

  20 Feb 2010; Raúl Porcel <armin76@gentoo.org> mjpegtools-1.9.0-r1.ebuild:
  alpha/sparc stable wrt #302435

  16 Feb 2010; Markus Meier <maekke@gentoo.org> mjpegtools-1.9.0-r1.ebuild:
  x86 stable, bug #302435
