@@ -1,6 +1,11 @@
 # ChangeLog for media-video/mjpegtools
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/mjpegtools/ChangeLog,v 1.153 2011/05/12 18:31:45 billie Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/mjpegtools/ChangeLog,v 1.154 2011/05/23 20:58:40 billie Exp $
+
+*mjpegtools-2.0.0 (23 May 2011)
+
+  23 May 2011; Daniel Pielmeier <billie@gentoo.org> +mjpegtools-2.0.0.ebuild:
+  Version bump.
 
 *mjpegtools-2.0.0_rc1 (12 May 2011)
 
